fix: Catalog -> Columns visibility menu -> Empty title for "Icon"

--- a/src/renderer/components/+catalog/catalog.module.css
+++ b/src/renderer/components/+catalog/catalog.module.css
@@ -19,43 +19,45 @@
  * CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  */
 
-.list :global(.TableRow) {
-  .entityName {
-    position: relative;
-    width: min-content;
-    max-width: 100%;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    padding-right: 24px;
+.Catalog {}
 
-    .pinIcon {
-      position: absolute;
-      right: 0;
-      opacity: 0;
-      transition: none;
+.entityName {
+  position: relative;
+  width: min-content;
+  max-width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  padding-right: 24px;
 
-      &:hover {
-        /* Drop styles defined for <Icon/> */
-        background-color: transparent;
-        box-shadow: none;
-      }
+  .pinIcon {
+    position: absolute;
+    right: 0;
+    opacity: 0;
+    transition: none;
+
+    &:hover {
+      /* Drop styles defined for <Icon/> */
+      background-color: transparent;
+      box-shadow: none;
     }
-  }
-
-  &:hover .pinIcon {
-    opacity: 1;
   }
 }
 
 .iconCell {
-  @apply flex items-center max-w-[40px];
-}
+  padding-top: calc(var(--padding) / 2);
+  flex: 0 0 40px !important;
 
-.iconCell > div * {
-  font-size: var(--unit);
-}
+  :global(.content) {
+    display: none; /* hide "Icon" text in the header */
+  }
 
-.nameCell {
+  div * {
+    font-size: var(--unit); /* icon's with plain text */
+  }
+
+  :global(.Icon) {
+    font-size: var(--small-size) !important;
+  }
 }
 
 .sourceCell {
@@ -64,14 +66,16 @@
 
 .statusCell {
   max-width: 100px;
-}
 
-.connected, .available {
-  color: var(--colorSuccess);
-}
+  :global {
+    .connected, .available {
+      color: var(--colorSuccess);
+    }
 
-.disconnected, .deleting, .unavailable {
-  color: var(--halfGray);
+    .disconnected, .deleting, .unavailable {
+      color: var(--halfGray);
+    }
+  }
 }
 
 .labelsCell {
